--- a/index.html
+++ b/index.html
@@ -420,6 +420,26 @@
             </li>
           </ul>
         </div>
+
+        <form class="subscribe-form">
+          <div class="email-request">
+            <label for="user-email" class="subscribe-label"> Subscribe </label>
+            <input
+              class="email-form"
+              type="email"
+              name="email"
+              id="user-email"
+              placeholder="E-mail"
+              required
+            />
+          </div>
+          <button type="button" class="subscribe-button">
+            <p>Subscribe</p>
+            <svg width="24" height="24" class="icon-subscribe">
+              <use href="./images/icons.svg#icon-Frame-3"></use>
+            </svg>
+          </button>
+        </form>
       </div>
     </footer>
     <div class="background-modal is-hidden" data-modal>
@@ -429,6 +449,37 @@
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
+        <p class="form-title">Leave your contacts and we will call you back</p>
+        <form class="content-modal">
+          <label class="label-modal" for="name">Name</label>
+          <div class="data-field">
+            <input class="input-field" type="text" id="name" required />
+          </div>
+          <label class="label-modal" for="phone">Phone</label>
+          <div class="data-field">
+            <input class="input-field" type="tel" id="phone" required />
+          </div>
+          <label class="label-modal" for="email">Email</label>
+          <div class="data-field">
+            <input class="input-field" type="email" id="email" required />
+          </div>
+          <label class="label-modal" for="comment">Comment</label>
+          <div class="data-field">
+            <textarea
+              id="comment"
+              name="comment"
+              rows="5"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="data-field">
+            <input type="checkbox" required id="terms-conditions" />
+            <label for="terms-conditions"
+              >I accept the terms and conditions of the Privacy Policy</label
+            >
+          </div>
+          <button type="submit">Send</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
