--- a/index.html
+++ b/index.html
@@ -420,26 +420,26 @@
             </li>
           </ul>
         </div>
-
-        <form class="subscribe-form">
-          <div class="email-request">
-            <label for="user-email" class="subscribe-label"> Subscribe </label>
-            <input
-              class="email-form"
-              type="email"
-              name="email"
-              id="user-email"
-              placeholder="E-mail"
-              required
-            />
-          </div>
-          <button type="button" class="subscribe-button">
-            <p>Subscribe</p>
-            <svg width="24" height="24" class="icon-subscribe">
-              <use href="./images/icons.svg#icon-Frame-3"></use>
-            </svg>
-          </button>
-        </form>
+        <div class="footer-form">
+          <p class="subscribe-label">Subscribe</p>
+          <form class="subscribe-form">
+            <label class="email-label">
+              <input
+                class="email-form"
+                type="email"
+                name="email"
+                placeholder="E-mail"
+                required
+              />
+            </label>
+            <button type="submit" class="subscribe-button">
+              <p>Subscribe</p>
+              <svg width="24" height="24" class="icon-subscribe">
+                <use href="./images/icons.svg#icon-Frame-3"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <div class="background-modal is-hidden" data-modal>
@@ -450,26 +450,59 @@
           </svg>
         </button>
         <p class="form-title">Leave your contacts and we will call you back</p>
-        <form class="content-modal">
-          <label class="label-modal" for="name">Name</label>
-          <div class="data-field">
-            <input class="input-field" type="text" id="name" required />
+        <form>
+          <div class="content-modal">
+            <label class="label-modal" for="user-name">Name</label>
+            <div class="data-field">
+              <input
+                class="input-field"
+                type="text"
+                name="user-name"
+                id="user-name"
+                required
+              />
+              <svg width="18" height="24" class="modal-icon">
+                <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
+              </svg>
+            </div>
           </div>
-          <label class="label-modal" for="phone">Phone</label>
-          <div class="data-field">
-            <input class="input-field" type="tel" id="phone" required />
+          <div class="content-modal">
+            <label class="label-modal" for="phone">Phone</label>
+            <div class="data-field">
+              <input
+                class="input-field"
+                type="tel"
+                name="phone"
+                id="phone"
+                required
+              />
+              <svg width="18" height="24" class="modal-icon">
+                <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
+              </svg>
+            </div>
           </div>
-          <label class="label-modal" for="email">Email</label>
-          <div class="data-field">
-            <input class="input-field" type="email" id="email" required />
+          <div class="content-modal">
+            <label class="label-modal" for="email">Email</label>
+            <div class="data-field">
+              <input
+                class="input-field"
+                type="email"
+                name="email"
+                id="email"
+                required
+              />
+              <svg width="18" height="24" class="modal-icon">
+                <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
+              </svg>
+            </div>
           </div>
-          <label class="label-modal" for="comment">Comment</label>
-          <div class="data-field">
+          <div class="field-comment">
+            <label class="label-modal" for="user-comment">Comment</label>
             <textarea
-              id="comment"
-              name="comment"
-              rows="5"
+              id="user-comment"
+              name="user-comment"
               placeholder="Text input"
+              class="field-text"
             ></textarea>
           </div>
           <div class="data-field">
