--- a/portfolio.html
+++ b/portfolio.html
@@ -307,25 +307,26 @@
             </li>
           </ul>
         </div>
-        <form class="subscribe-form">
-          <div class="email-request">
-            <label for="user-email" class="subscribe-label"> Subscribe </label>
-            <input
-              class="email-form"
-              type="email"
-              name="email"
-              id="user-email"
-              placeholder="E-mail"
-              required
-            />
-          </div>
-          <button type="submit" class="subscribe-button">
-            <p>Subscribe</p>
-            <svg width="24" height="24" class="icon-subscribe">
-              <use href="./images/icons.svg#icon-Frame-3"></use>
-            </svg>
-          </button>
-        </form>
+        <div class="footer-form">
+          <p class="subscribe-label">Subscribe</p>
+          <form class="subscribe-form">
+            <label class="email-label">
+              <input
+                class="email-form"
+                type="email"
+                name="email"
+                placeholder="E-mail"
+                required
+              />
+            </label>
+            <button type="submit" class="subscribe-button">
+              <p>Subscribe</p>
+              <svg width="24" height="24" class="icon-subscribe">
+                <use href="./images/icons.svg#icon-Frame-3"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
