--- a/index.html
+++ b/index.html
@@ -511,11 +511,11 @@
               id="user-privacy"
               value="true"
               name="user-privacy"
-              class="visually-hidden"
+              class="modal-checked visually-hidden"
               required
             />
             <label class="terms-conditions" for="user-privacy"
-              ><svg class="accept-icon"></svg>
+              ><span><svg class="accept-icon"></svg></span>
               I accept the terms and conditions of the Privacy Policy
             </label>
           </div>
