--- a/index.html
+++ b/index.html
@@ -514,12 +514,15 @@
               class="modal-checked visually-hidden"
               required
             />
-            <label class="terms-conditions" for="user-privacy"
-              ><span><svg class="accept-icon"></svg></span>
+            <label class="terms-conditions" for="user-privacy">
+              <span class="accept-icon"
+                ><svg class="check-icon" widht="10" height="8">
+                  <use href="./images/icons.svg#icon-Vector"></use></svg
+              ></span>
               I accept the terms and conditions of the Privacy Policy
             </label>
           </div>
-          <button type="submit">Send</button>
+          <button class="send-button" type="submit">Send</button>
         </form>
       </div>
     </div>
