--- a/index.html
+++ b/index.html
@@ -515,10 +515,11 @@
               required
             />
             <label class="terms-conditions" for="user-privacy">
-              <span class="accept-icon"
-                ><svg class="check-icon" widht="10" height="8">
-                  <use href="./images/icons.svg#icon-Vector"></use></svg
-              ></span>
+              <span class="accept-icon">
+                <svg class="check-icon" widht="10" height="8">
+                  <use href="./images/icons.svg#icon-Vector"></use>
+                </svg>
+              </span>
               I accept the terms and conditions of the Privacy Policy
             </label>
           </div>
