--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
               />
             </label>
             <button type="submit" class="subscribe-button">
-              <p>Subscribe</p>
+              Subscribe
               <svg width="24" height="24" class="icon-subscribe">
                 <use href="./images/icons.svg#icon-Frame-3"></use>
               </svg>
