--- a/index.html
+++ b/index.html
@@ -511,13 +511,13 @@
               id="user-privacy"
               value="true"
               name="user-privacy"
-              class="modal-checked visually-hidden"
+              class="modal-check visually-hidden"
               required
             />
             <label class="terms-conditions" for="user-privacy">
               <span class="accept-icon">
-                <svg class="check-icon" widht="10" height="8">
-                  <use href="./images/icons.svg#icon-Vector"></use>
+                <svg class="check-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-Vector-1"></use>
                 </svg>
               </span>
               I accept the terms and conditions of the Privacy Policy
