--- a/index.html
+++ b/index.html
@@ -520,7 +520,8 @@
                   <use href="./images/icons.svg#icon-Vector-1"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the Privacy Policy
+              I accept the terms and conditions of the
+              <a href="" class="privacy-policy">Privacy Policy</a>
             </label>
           </div>
           <button class="send-button" type="submit">Send</button>
